# disked

./: .gitignore  Dockerfile  ROADMAP.md  index.html  package-lock.json  package.json  server.js
.github/workflows/: release.yml
src/: App.css  App.jsx
src-tauri/: Cargo.toml  smart-scan-config.json  tauri.conf.json
src-tauri/src/: lib.rs
src/components/: AppUninstaller.jsx  DiskGauge.jsx  DisksOverview.jsx  DuplicatesFinder.jsx  FileTree.jsx  LargestFiles.jsx  SmartScanList.jsx  TerminalConsole.jsx
src/utils/: api.js
test/: safety.test.js
